# channels-console

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/channels-console/: Cargo.toml
crates/channels-console-futures-test/: Cargo.toml
crates/channels-console-futures-test/examples/: basic_futures.rs  basic_json_futures.rs  closed_futures.rs  console_feed_futures.rs  iter_futures.rs  oneshot_closed_futures.rs
crates/channels-console-std-test/: Cargo.toml
crates/channels-console-std-test/examples/: basic_json_std.rs  basic_std.rs  closed_std.rs  console_feed_std.rs  iter_std.rs  test_macro_order.rs
crates/channels-console-test/: Cargo.toml
crates/channels-console-test/examples/: basic.rs  basic_json.rs  closed.rs  console_feed.rs  oneshot_closed.rs
crates/channels-console-tokio-test/: Cargo.toml
crates/channels-console-tokio-test/examples/: basic_json_tokio.rs  basic_tokio.rs  closed_tokio.rs  console_feed_tokio.rs  iter_tokio.rs  oneshot_closed_tokio.rs
crates/channels-console/src/: channels_guard.rs  http_api.rs  lib.rs  wrappers.rs
crates/channels-console/src/wrappers/: futures.rs  std.rs  tokio.rs
crates/channels-console/tests/: cli_tests.rs  cli_tests_futures.rs  cli_tests_std.rs  cli_tests_tokio.rs
