[package]
name = "channels-console-futures-test"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
channels-console = { workspace = true, optional = true, features = ["futures"] }
futures-channel = "0.3"
futures-util = "0.3"
smol = "2.0"
async-io = "2.0"

[features]
channels-console = ["dep:channels-console"]
